RESOLVED FIXED66951
[Qt] [WK2] Assert in computeViewportAttributes when MiniBrowser started with -touch
https://bugs.webkit.org/show_bug.cgi?id=66951
Summary [Qt] [WK2] Assert in computeViewportAttributes when MiniBrowser started with ...
Viatcheslav Ostapenko
Reported 2011-08-25 09:45:54 PDT
BrowserView::resizeEvent set width and height one by one. m_item->setWidth in BrowserView::resizeEvent() cause QTouchWebView::geometryChanged() which calls QTouchWebViewPrivate::updateViewportConstraints() and computeViewportAttributes while height is still 0 .
Attachments
Replace setWidth/setHeight with setSize. (1.29 KB, patch)
2011-08-25 09:56 PDT, Viatcheslav Ostapenko
no flags
Viatcheslav Ostapenko
Comment 1 2011-08-25 09:56:55 PDT
Created attachment 105203 [details] Replace setWidth/setHeight with setSize.
WebKit Review Bot
Comment 2 2011-08-25 16:06:59 PDT
Comment on attachment 105203 [details] Replace setWidth/setHeight with setSize. Clearing flags on attachment: 105203 Committed r93831: <http://trac.webkit.org/changeset/93831>
WebKit Review Bot
Comment 3 2011-08-25 16:07:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.