[Qt] [WK2] Assert in computeViewportAttributes when MiniBrowser started with -touch https://bugs.webkit.org/show_bug.cgi?id=66951

Patch by Viatcheslav Ostapenko <ostapenko.viatcheslav@nokia.com> on 2011-08-25
Reviewed by Andreas Kling.

Function computeViewportAttributes() gets called when height is still 0 because MiniBrowser sets
width and height one by one and setWidth cause geometryChange event in QTouchWebView.

* MiniBrowser/qt/BrowserView.cpp:
(BrowserView::resizeEvent):

Canonical link: https://commits.webkit.org/82776@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93831 268f45cc-cd09-0410-ab3c-d52691b4dbfc