Tools/MiniBrowser/qt/BrowserView.cpp
@@ -57,8 +57,7 @@ void BrowserView::resizeEvent(QResizeEvent* event)
     QSGCanvas::resizeEvent(event);
     m_item->setX(0);
     m_item->setY(0);
-    m_item->setWidth(event->size().width());
-    m_item->setHeight(event->size().height());
+    m_item->setSize(event->size());
 }
 
 void BrowserView::load(const QString& urlString)
